# nvcli

./: .gitignore  Cargo.toml  build.rs  license  readme.md
docs/: Gemfile  _config.yml  index.md
lib/: nvapi64.lib
src/: main.rs  nvapi_sys_new.rs
src/cli/: clap.rs  error.rs  mod.rs
src/nvapi/: display.rs  gamma.rs  general.rs  gpu.rs  handle.rs  mod.rs  monitor.rs  nvapi.rs  position.rs  rotation.rs  scaling.rs  vio.rs  vrr.rs
src/win/: device.rs  gamma.rs  mod.rs
