[package]
name = "nvcli"
version = "0.1.0"
edition = "2021"
author = "sqooid"
description = "Command line interface to change some Nvidia control panel settings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvapi_sys_new = {path="../nvapi"}
clap = {version="3.2.11", features=["derive"]}
colored = "2.0.0"
windows = {version="0.38.0", features=["Win32_UI_ColorSystem","Win32_Foundation","Win32_Graphics_Gdi","Win32_Graphics_Direct3D9"]}