[package]
name = "nvcli"
version = "1.0.0"
edition = "2021"
authors = ["sqooid"]
description = "Command line interface to change a number of Nvidia control panel display settings"
documentation = "https://github.com/sqooid/nvcli"
homepage = "https://github.com/sqooid/nvcli"
repository = "https://github.com/sqooid/nvcli"
license = "MIT"
license-file = "license"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvapi_sys_new = "0.1.4"
clap = {version="3.2.11", features=["derive"]}
colored = "2.0.0"